# mission_planner

./: CMakeLists.txt  package.xml
include/inspector/: helper.h  inspector_class.h  structs.h  tf_class.h
include/mission_planner/: drone_structs.h  helper.h  inspection_class.h  mission_class.h  polynomials.h  rover_mission_class.h  rover_structs.h  structs.h  tf_class.h  vicon_collision_avoidance_example.h  vicon_rover_inspection.h  vicon_swarm_inspection.h  visualization_functions.h  xyz_heading.h
launch/: collision_avoidance_example.launch  inspector.launch  rover_inspection.launch  rover_swarm_inspection.launch  swarm_inspection.launch
src/: callbacks.cpp  drone_threads.cpp  helper.cpp  inspection_class.cpp  inspection_mission.cpp  inspector_class.cpp  inspector_node.cpp  mission_class.cpp  mission_node.cpp  msg_conversions.cpp  polynomials.cpp  rover_mission_class.cpp  rover_threads.cpp  swarm_mission_node.cpp  threads.cpp  vicon_collision_avoidance_example.cpp  vicon_rover_inspection.cpp  vicon_swarm_inspection.cpp  visualization_functions.cpp
src/nodes/: collision_avoidance_node.cpp  mission_node.cpp  swarm_mission_node.cpp
waypoints/: wps.txt  wps_bilbo.txt  wps_frodo.txt
