<?xml version="1.0"?>
<package format="2">
  <name>mission_planner</name>
  <version>0.0.0</version>
  <description>The mission_planner package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="mma2739@todo.todo">mma2739</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>


  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mg_msgs</build_depend>
  <build_depend>p4_ros</build_depend>
  <build_depend>mapper</build_depend>
  <build_depend>rocpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>px4_control</build_depend>
  <build_depend>cmake_modules</build_depend>

  <build_export_depend>mg_msgs</build_export_depend>
  <build_export_depend>p4_ros</build_export_depend>
  <build_export_depend>mapper</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>px4_control</build_export_depend>
  <build_export_depend>cmake_modules</build_export_depend>
  
  <exec_depend>mg_msgs</exec_depend>
  <exec_depend>p4_ros</exec_depend>
  <exec_depend>mapper</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>px4_control</exec_depend>
  <exec_depend>cmake_modules</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
